--- a/social_context/zomes/social_context/code/Cargo.toml
+++ b/social_context/zomes/social_context/code/Cargo.toml
@@ -11,6 +11,8 @@ serde_derive = "1.0"
 hdk = "=0.0.47-alpha1"
 holochain_wasm_utils = "=0.0.47-alpha1"
 holochain_json_derive = "0.0"
+hdk_proc_macros = "=0.0.47-alpha1"
+meta-traits = { git = "https://github.com/juntofoundation/Holochain-Trait-Definitions", branch = "master" }
 
 [lib]
 path = "src/lib.rs"
