--- a/social_context/zomes/social_context/code/Cargo.toml
+++ b/social_context/zomes/social_context/code/Cargo.toml
@@ -13,6 +13,7 @@ holochain_wasm_utils = "=0.0.47-alpha1"
 holochain_json_derive = "0.0"
 hdk_proc_macros = "=0.0.47-alpha1"
 meta-traits = { git = "https://github.com/juntofoundation/Holochain-Trait-Definitions", branch = "master" }
+multihash = "0.8.0"
 
 [patch."https://github.com/juntofoundation/Holochain-Trait-Definitions"]
 meta-traits = { path = "../../../../../Holochain-Trait-Definitions" }
