--- a/public/social_context/zomes/social_context/code/Cargo.toml
+++ b/public/social_context/zomes/social_context/code/Cargo.toml
@@ -14,10 +14,10 @@ holochain_json_derive = "0.0"
 hdk_proc_macros = "=0.0.47-alpha1"
 meta-traits = { git = "https://github.com/juntofoundation/Holochain-Trait-Definitions", branch = "master" }
 multihash = "0.8.0"
-reqwest = "0.10.4"
+lazy_static = "1.4.0"
 
 [patch."https://github.com/juntofoundation/Holochain-Trait-Definitions"]
-meta-traits = { path = "../../../../../Holochain-Trait-Definitions" }
+meta-traits = { path = "../../../../../../Holochain-Trait-Definitions" }
 
 [lib]
 path = "src/lib.rs"
