first pass at new; lower level acai'd "social context"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
   "zomes/social_context",
-  "zomes/social_context_chunked"
+  "zomes/social_context_chunked",
+  "zomes/social_context_link_store"
 ]
 
 [profile.dev]
