--- a/zomes/social_context_link_store/Cargo.toml
+++ b/zomes/social_context_link_store/Cargo.toml
@@ -14,7 +14,7 @@ serde = "1"
 lazy_static = "*"
 #meta-traits = { git = "https://github.com/juntofoundation/Holochain-Trait-Definitions", branch = "master" }
 meta-traits = {path = "../../../Holochain-Trait-Definitions"}
-
+chrono = {version = "*", features=["serde"] }
 
 hdk3 = "0"
 holo_hash = "0"
