add correct subject, object, predicate store implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
   "zomes/social_context",
   "zomes/social_context_chunked",
-  "zomes/social_context_link_store"
+  "zomes/social_context_link_store",
+  "zomes/social_context_acai"
 ]
 
 [profile.dev]
@@ -13,5 +14,5 @@ opt-level = "z"
 
 [patch.crates-io]
 hc_utils = { git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils" }
-hdk3 = { git = "https://github.com/holochain/holochain", branch = "3675b58", package = "hdk3" }
-holo_hash = { git = "https://github.com/holochain/holochain", branch = "3675b58", package = "holo_hash" }
+hdk3 = { git = "https://github.com/holochain/holochain", rev = "3675b58", package = "hdk3" }
+holo_hash = { git = "https://github.com/holochain/holochain", rev = "3675b58", package = "holo_hash" }
