added internal error type, update link, delete link and recv remote signal fn for notifying UI of new links once they are added

--- a/zomes/social_context/Cargo.toml
+++ b/zomes/social_context/Cargo.toml
@@ -17,3 +17,4 @@ chrono = { version = "*", features=["serde"] }
 hc_time_index = { path = "../../../time_delimited_indexing" }
 
 hdk3 = "0"
+thiserror = "*"
