--- a/zomes/social_context/Cargo.toml
+++ b/zomes/social_context/Cargo.toml
@@ -15,8 +15,7 @@ lazy_static = "*"
 chrono = { version = "*", features=["serde"] }
 #hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
 hc_time_index = { path = "../../../time_delimited_indexing" }
+thiserror = "1.0.20"
 
-hdk3 = "0"
-thiserror = "*"
-
-holo_hash = "0"
+hdk = "0.0.100"
+holo_hash = "0.0.2-alpha.1"
