--- a/zomes/social_context/Cargo.toml
+++ b/zomes/social_context/Cargo.toml
@@ -12,7 +12,7 @@ name = "social_context"
 derive_more = "0"
 serde = "1"
 lazy_static = "*"
-chrono = { version = "*", features=["serde"] }
+chrono = { version = "0.4", features=["serde"] }
 #hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
 hc_time_index = { path = "../../../time_delimited_indexing" }
 thiserror = "1.0.20"
