--- a/zomes/social_context/Cargo.toml
+++ b/zomes/social_context/Cargo.toml
@@ -16,6 +16,7 @@ chrono = { version = "0.4", features=["serde"] }
 #hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
 hc_time_index = { path = "../../../time_delimited_indexing" }
 thiserror = "1.0.20"
+hex = "*"
 
 hdk = "0.0.100"
 holo_hash = "0.0.2-alpha.1"
