--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ad4m": "file:../../../../ad4m",
-    "language-context": "file:../../../../language-context",
+    "@perspect3vism/ad4m": "^0.0.4",
+    "@perspect3vism/ad4m-language-context": "^0.0.1",
+    "@perspect3vism/rollup-plugin-dna": "^0.0.2",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
