--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,6 @@ jobs:
     - name: Upload released files
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release/full_time_index/bundle.js,release/full_time_index/social-context.dna,release/full_index.zip,release/full_time_index.zip,release/signal.zip"
+        artifacts: "./release/full_time_index/bundle.js, ./release/full_time_index/social-context.dna, ./release/full_index.zip, ./release/full_time_index.zip, ./release/signal.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: true  
